--- a/backend/new.ipynb
+++ b/backend/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,8 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# 1️⃣ Load Dataset (Update with your dataset path)\n",
-    "df = pd.read_csv(r\"C:\\Users\\MAYUR\\Desktop\\mental_health_prediction\\mental_health_data_structured.csv\")  # Replace with actual file\n",
+    "# df = pd.read_csv(r\"C:\\Users\\MAYUR\\Desktop\\mental_health_prediction\\mental_health_data_structured.csv\")  # Replace with actual file\n",
+    "df = pd.read_csv(r\"C:\\Users\\MAYUR\\Desktop\\mental_health_prediction\\backend\\mental_health_data_structured.csv\")  # Replace with actual file\n",
     "\n",
     "# 2️⃣ Handle Missing Values (if any)\n",
     "df.fillna(df.mean(), inplace=True)  # Replace NaN with column means\n",
